# python_package_template

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: sphinx.yml
