[metadata]
name = <FTName>
version = 1.0.0
license = Intel Internal Use Only
description = Package description
long_description = file: README.rst
author = Lorenzo Delcroix
author_email = lorenzo.delcroix@intel.com
classifiers=
   Private :: Do Not Upload
   Natural Language :: English
   Operating System :: OS Independent
   Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.11
install_requires =
   <requirement 1>
   <requirement 2>
   <...>
   <requirement n>

[options.packages.find]
where=src